# tiresias

./: .gitignore  .pylintrc  CNAME  LICENSE  README.md  index.html  main.py  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  tool.html
.github/workflows/: js-tests.yml  lint.yaml  python-tests.yml
css/: landing.css  theme.css  tool.css
data/: 2025-08-07-dataset.csv  responses.csv
doc/: developers.md
js/: aggregate.js  chart.js  curveFit.js  eye.js  model.js  personalize.js  share.js  stars.js  steps.js  tool.js  wit.js
model/: pipeline.json
scraping/: cli.py  guardian.py  nolan_match.py
scripts/: letterboxd.py  query_letterboxd.py
src/: constants.py  main.py  site_export.py
src/constants/: columns.py  directories.py  films.py  wordmark.py
src/explore/: explore.ipynb
src/helpers/: manager.py  ratings.py  utils.py
src/network/: export.py  mlp.py  net.py  train.py
src/nolan_index/: aggregate.py
src/oscars/: predict.py
src/personalization/: curve_fit.py  predict.py
src/plotting/: nolan_scatter.py  oscars_metric.py  style.py  user_curve.py
src/preprocessing/: preprocess.py  tensors.py  users.py
src/validation/: validate.py
tests/: test_aggregate.py  test_curve_fit.py  test_oscars.py  test_personalization_predict.py  test_plotting.py  test_preprocess.py  test_users.py  test_validate.py
tests/js/: aggregate.test.mjs  curveFit.test.mjs  model.test.mjs  personalize.test.mjs  share.test.mjs  wit.test.mjs
tests/scraping/: test_guardian.py  test_nolan_match.py
